# Yummy-Puppy

./: .dockerignore  .gitignore  .gitmodules  .txt  CMakeLists.txt  CNAME  Makefile  README.md  bin_makefile  c++.sql  closure_go.sh  cmake_wiki.md  coding_conventions.md  configNoLib.cmake.in  create_file_with_links.sh  data.json  debug.txt  dockerfile  dso_makefile  env.yml  fawry.json  functions.cmake  index.html  leaf_bin_makefile  leaf_dso_makefile  leaf_makefile  leaf_makefile.vars  leaf_test_makefile  makefile.vars  orm_config.json  rMakefile  recursive_makefile  run_closure.sh  run_ledger_closure.sh  test_make
ThorsSerializer/ThorsStorage/: file.h  file.tpp
Webserver-Backend/: CMakeLists.txt  Makefile.back  bin_makefile  config.json
Webserver-Backend/conf/: blnk-ml.init
Webserver-Backend/headers/: ConfigFile.h  GarbageCollector.h  HTTPBadRequestExceptionHandler.h  HTTPExceptionHandler.h  HTTPMethodNotAllowedExceptionHandler.h  HTTPNotAcceptableExceptionHandler.h  HTTPNotFoundExceptionHandler.h  HTTPOPTIONSRequest.h  HTTPOPTIONSResponse.h  HTTPPOSTRequest.h  HTTPRequest.h  HTTPRequestManager.h  HTTPResponse.h  HTTPResponseHeader.h  HTTPService.h  HTTPServiceManager.h  HTTPTransaction.h  Logger.h  MiddleWare.h  Middleware.h  MiddlewareManager.h  SharedObjectsManager.h  TCPServerSocket.h  URLService.h  common.h  common_ws.h  includes.h
Webserver-Backend/mains/: c++_app_server.cpp
Webserver-Backend/sources/: dso_makefile
Webserver-Backend/sources/libs/: ConfigFile.cpp  HTTPBadRequestExceptionHandler.cpp  HTTPMethodNotAllowedExceptionHandler.cpp  HTTPNotAcceptableExceptionHandler.cpp  HTTPNotFoundExceptionHandler.cpp  HTTPOPTIONSRequest.cpp  HTTPOPTIONSResponse.cpp  HTTPPOSTRequest.cpp  HTTPRequest.cpp  HTTPRequestManager.cpp  HTTPResponse.cpp  HTTPResponseHeader.cpp  HTTPService.cpp  HTTPServiceManager.cpp  HTTPTransaction.cpp  Logger.cpp  Middleware.cpp  MiddlewareManager.cpp  SharedObjectsManager.cpp  TCPServerSocket.cpp  TCPSocket.cpp
Webserver-Backend/sources/mains/: c++_app_server.cpp
applications/: leaf_makefile.vars  main.cpp
external_deps/: CMakeLists.txt
external_deps/ThorsSerializer/ThorsIOUtil/: Example.source
external_deps/ThorsSerializer/ThorsLogging/: loguru.hpp  loguru.source
framework/: CMakeLists.txt  frameworkConfig.cmake.in
framework/headers/: common.h
framework/headers/common/: ResourceManager.h
framework/headers/endpoint/: EndpointService.h
framework/headers/generator/: PSQLPrimitiveORMGenerator.h  TemplateHandler.h
framework/headers/postgres/: PSQLAbstractORM.h  PSQLAbstractORMIterator.h  PSQLAbstractQueryIterator.h  PSQLConnectionManager.h  PSQLController.h  PSQLORMCache.h  PSQLPrimitiveORMGenerator.h  PSQLUpdateQuery.h
framework/headers/postgres/column_types/: PSQLBool.h  PSQLInt4.h  PSQLNumeric.h  PSQLText.h
framework/headers/serializer/: AbstractSerializer.h
framework/headers/team_threads/: TeamThread.h
framework/headers/utils/: FileWriter.h  Singleton.h  TestManager.h  TestUtils.h  reader.h  utils.h
framework/mains/: orm_generator.cpp
framework/sources/column_types/: PSQLBool.cpp  PSQLInt2.cpp  PSQLInt4.cpp  PSQLInt8.cpp
framework/sources/generator/: PSQLPrimitiveORMGenerator.cpp  TemplateHandler.cpp
framework/sources/postgres/: PSQLAbstractORM.cpp  PSQLAbstractQueryIterator.cpp  PSQLConnectionManager.cpp  PSQLController.cpp  PSQLDataSource.cpp  PSQLORMCache.cpp  PSQLPrimitiveORMGenerator.cpp  PSQLQuery.cpp  PSQLUpdateQuery.cpp
framework/sources/serializer/: AbstractMultipartSerializer.cpp
framework/sources/utils/: FileReader.cpp  reader.cpp  utils.cpp
framework/templates/: CMakeLists.txt  functions.cmake
framework/templates/headers/: ORMPrimitiveTemplate.h
framework/templates/sources/: ORMPrimitiveTemplate.cpp
headers/: common.h  common_orm.h  reader.h  utils.h
headers/TestSerializer/: TestSerializer.h
headers/abstract/: AbstractDBConnection.h  AbstractDBQuery.h  AbstractDatabaseColumn.h  LedgerClosureStep.h  common.h
headers/blnk/: AccrualInterest.h  CancelLoans.h  DisburseLoans.h  LedgerAmount.h  LedgerClosureService.h  LedgerCompositLeg.h  TemplateLeg.h  TemplateManager.h  UndueToDue.h
headers/common/: ResourceManager.h
headers/endpoint/: EndpointClient.h  EndpointService.h
headers/exceptions/: AbstractException.h
headers/lambda/: AccrualInterestFunc.h  CancelFunc.h  Disbursefunc.h  UndueToDue.h  UndueToDueFunc.h  lambdas.h
headers/ledger_services/: CancelFunc.h  CancelLateFeesFunc.h  ChangeDayService.h  CreditIScoreFunc.h  CustomerPaymentFunc.h  Disbursefunc.h  DueForSettlementWithMerchantFunc.h  DueToOverdueFunc.h  IScoreNidInquiryFunc.h  LongToShortTermFunc.h  OnboardingCommissionFunc.h  ReverseSettlementLoansWithMerchantFunc.h  UndueToDueFunc.h  UnmarginalizeFunc.h  UpdatingProvisionsFunc.h  WalletPrepaidFunc.h
headers/ledger_steps/: AccrualInterest.h  CancelLateFees.h  CreditIScore.h  CustomerPayment.h  DueForSettlementWithMerchant.h  DueToOverdue.h  IScoreNidInquiry.h  LedgerAmount.h  LongToShortTerm.h  MarginalizeIncome.h  OnboardingCommission.h  SettlementByCustomer.h  SettlementLoansWithMerchant.h  TemplateManager.h  UndueToDue.h  Unmarginalize.h  UpdatingProvisions.h
headers/postgres/: PSQLAbstractIterator.h  PSQLAbstractORM.h  PSQLAbstractORMIterator.h  PSQLAbstractQueryIterator.h  PSQLConnection.h  PSQLConnectionManager.h  PSQLController.h  PSQLDataSource.h  PSQLORMCache.h  PSQLPrimitiveORMGenerator.h  PSQLQuery.h
headers/serializer/: AbstractMultipartSerializer.h  AbstractSerializer.h
headers/test_serializer/: TestSerializer.h
middlewares/: CMakeLists.txt
middlewares/headers/: JWTMiddleware.h  PSQLInitMiddleware.h
middlewares/sources/: JWTMiddleware.cpp  Makefile  PSQLInitMiddleware.cpp
sources/: utils.cpp
tests/: database_utils.py  due_to_overdue.py  full_closure.py  last_accrual_interest_day.py  long_to_short.py  main.py  marginalization.py  test_sample.cpp  undue_to_due.py  update_loan_status.py
tests_python/: .env  .main.py.swp  colors.py  full_closure.py  ledger_closure.py  log.txt  main.py  slack_notify.py  undue_to_due.py
(+248 files in other folders)
